# noughtsandcrosses

./: .gitignore  LICENSE  Player1.hs  Player2.hs  README.md  Utils.hs  g.bat  nac.hs  noughtsandcrosses.cabal  stack.yaml
src/: Board.hs  Main.hs  Player1.hs  Player2.hs  Types.hs  Utils.hs
src/AI/: Eval.hs  Gametree.hs  Minimax.hs
