name:                noughtsandcrosses
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://cedt-icg-bitbucket.nam.nsroot.net/bitbucket/users/pc29124/repos/noughtsandcrosses
license:             BSD3
license-file:        LICENSE
author:              Philip Craig
maintainer:          philip.craig@citi.com
copyright:           2017 Philip Craig
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable noughtsandcrosses
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Player1, Player2, Utils